cmake_minimum_required(VERSION 3.23)
project(C++PrimerPlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(C++PrimerPlus
        2_1.cpp
        2_2.cpp
        2_3.cpp
        2_5.cpp
        3_1.cpp
        3_2.cpp
        3_4.cpp
        3_6.cpp
        3_7.cpp 3_8.cpp 3_10.cpp 3_11.cpp 3_13.cpp 3_14.cpp 4_1.cpp test.cpp 4_2.cpp 4_3.cpp 4_4.cpp 4_5.cpp 4_6.cpp 4_7.cpp 4_8.cpp 4_9.cpp 4_10.cpp)
